style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: "Roboto", sans-serif;
}

body{
  background-color: #0d1117;
  display: flex;
  align-items: center;
  padding: 2rem 0;


}

.container {
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;

}

.landing-profile {
  display: flex;
  width: 70vw;
  padding: 0 2rem 0 0;
  align-items: center;
  justify-content: center;
  background-color: rgba(255, 255, 255);
  border-radius: 2rem;

}

.landing-profile--image {
  display: flex;
  align-items: flex-start;
}

.landing-profile--image img {
  border-radius: 2rem 0 0 2rem;
  height: 75vh;
  object-fit: cover;
}

.landing-profile--text {
  /* padding: 1rem 2rem; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.landing-profile__greetings {
  text-align: center;
  font-family: "Roboto", sans-serif;
  letter-spacing: 0.2rem;
  text-transform: uppercase;
  color: #0d1117;
  font-weight: 700;
  margin-top: 2.5rem;
}
.line {
  margin-top: 1rem;
  width: 8vw;
  height: 1vh;
  background-color: #1a2639;
}
.landing-profile__header {
  text-align: center;
  font-size: 4rem;
  margin-top: 1rem;
  color: #0d1117;
}

.landing-profile__desc {
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 1rem;
  line-height: 1.5;
  font-size: 1.2rem;
  color: #0d11179d;
}

button {
  padding: 1rem 2rem;
  border: none;
  border-radius: 0.3rem;
  background-color: #0d1117;
  color: white;
  font-size: 1.1rem;
  margin-bottom: 2rem;
  cursor: pointer;
}
button:hover {
  background-color: #1a2639;
  transition: 0.4s ease-in-out all;
}

button .fa {
  margin-right: 0.5rem;
}

.social__icons .links {
  font-size: 1.5rem;
  flex-direction: row;
  align-items: center;
  color: #0d1117;
  justify-content: center;
  margin-top: 1.8rem;
  margin-bottom: 1rem;
  cursor: pointer;
  text-decoration: none;
}

.social__icons .links:hover {
  color: #1a2639;
  transition: 0.5s ease-in-out all;
}

.social:hover {
  transform: translateY(-30%);
  transition: 0.4s ease-in-out all;
  border: 1px solid rgba(41, 41, 41, 0.896);
}
.social {
  margin: 0.5rem;
  border-radius: 2rem;
  padding: 0.5rem 0.5rem;
  border: 1px solid grey;
}





@media (max-width: 620px) {

  .landing-profile--text {
    padding: 0 1.2rem;
  }
  .landing-profile--image {
    height: 60vh;
    border-radius: 2rem 2rem 0 0;

  }

  .landing-profile--image img {
    height: 50vh;
    border-radius: 2rem 2rem 0 0;
  }

  .landing-profile__greetings {

    margin-top: -1rem;
 
   }
 
   .line {
     margin-top: 0.5rem;
     width: 7vw;
     height: 1vh;
     background-color: #1a2639;

}


}


@media (max-width: 1203px) {
.container{
    height: 100vh;
    padding: 5rem;
}

  .landing-profile {
    display: flex;
    flex-direction: column;
    padding: 0rem;
    width: 80vw;

  }

  .landing-profile--image {
    height: 60vh;
    padding: 0 0;
  }

  .landing-profile--image img {
    height: 50vh;
    width: 80vw;
    border-radius: 2rem 2rem 0 0;
  }

  .landing-profile__header {
    text-align: center;
    font-size: 2.5rem;
    margin-top: 1rem;
    color: #0d1117;
    
  }

  .line {
    margin-top: 0.5rem;
    width: 10vw;
    height: 1vh;
    background-color: #1a2639;
    

}
.landing-profile__desc {
    text-align: center;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    font-size: 1.2rem;
    padding: 0 1rem;
    color: #0d11179d;
  }

  button {
    padding: 1rem 2rem;
    border: none;
    border-radius: 0.3rem;
    background-color: #0d1117;
    color: white;
    font-size: 1rem;
    margin-top: 1.2rem;
    cursor: pointer;
  }  

  .social__icons {
    display: flex;
    /* gap: 2rem; */
    font-size: 1.2rem;
    color: #0d1117;
    margin-top: -2.2rem;
    margin-bottom: 2.5rem;
    cursor: pointer;
  }



}

